@@ -18,7 +18,7 @@ namespace ORNG {
 			exit(-1);
 		}
 
-		result = mp_system->init(512, FMOD_INIT_NORMAL, 0);    // Initialize FMOD.
+		result = mp_system->init(512, FMOD_INIT_3D_RIGHTHANDED, 0);    // Initialize FMOD.
 		if (result != FMOD_OK)
 		{
 			ORNG_CORE_ERROR("FMOD error! ({0}) {1}\n", result, FMOD_ErrorString(result));
